handle modular app